# python_test_project

./: README.md  pyproject.toml
src/greet/: location.py
tests/: test_greet.py
