[tool.poetry]
name = "greet"
version = "0.1.0"
description = ""
authors = ["Jeff Wan <jeff.wan@hinge.co>"]

[tool.poetry.dependencies]
python = "^3.7"
arrow = "^1.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
